@@ -18,7 +18,7 @@ my $s = $driver->session;
 # functionality. If the behaviour of such functionality changes, we
 # want it to be a conscious decision, hence we test for it.
 
-use Test::More 0.96 tests => 1 + 1;
+use Test::More 0.96 tests => 1 + 2;
 use Test::Exception;
 use Test::Warnings qw(warning);
 
@@ -35,6 +35,36 @@ subtest 'close()' => sub {
 	$w = '';
 	lives_ok { $w = warning { $s->close; }; } 'Session close()';
 	(like $w, qr/\bdeprecate/, 'Session close deprecated') or diag 'got warning(s): ', explain($w);
+};
+
+
+subtest 'die_on_error = 0' => sub {
+	# die_on_error only ever affected upstream errors via HTTP, 
+	# never any errors issued via Bolt or by this driver itself.
+	plan skip_all => "(test requires HTTP)" if $Neo4j::Test::bolt;
+	plan tests => 8;
+	# init
+	my $d = Neo4j::Test->driver;
+	$d->{die_on_error} = 0;
+	my $t;
+	$w = '';
+	lives_ok { $w = warning { $t = $d->session->begin_transaction; }; } 'Tx open';
+	(like $w, qr/\bdeprecate/, 'die_on_error deprecated') or diag 'got warning(s): ', explain($w);
+	# successful statement
+	lives_and { is $t->run('RETURN 42, "live on error"')->single->get(0), 42 } 'no error';
+	# failing statement
+	$w = '';
+	lives_ok { $w = warning { is $t->run('iced manifolds.')->size, 0 }; } 'execute cypher syntax error';
+	(like $w, qr/\bStatement\b.*\bSyntax.?Error\b/i, 'cypher syntax error') or diag 'got warning(s): ', explain($w);
+	# connection issue
+	$w = '';
+	lives_ok { $w = warning {
+		no warnings 'deprecated';
+		my $d = Neo4j::Test->driver_no_host;
+		$d->{die_on_error} = 0;
+		$d->session->run;
+	}; } 'no connection';
+	(like $w, qr/\bNetwork\b.*\bCan't connect\b/i, 'no connection warning') or diag 'got warning(s): ', explain($w);
 };
 
 
