@@ -3,6 +3,7 @@ Revision history for Driver::Neo4j
 0.1301, 2019-12-16
 
  - deprecate experimental close() method
+ - deprecate experimental suppression of exceptions (die_on_error = 0)
 
 0.13, 2019-10-14
 
